[package]
name = "vicuna"
description = "AWS Lambdas made simple."
version = "0.3.0"
authors = ["Max Countryman <maxc@me.com>"]
homepage = "https://github.com/PocketDerm/vicuna"
repository = "https://github.com/PocketDerm/vicuna"
documentation = "https://docs.rs/vicuna"
keywords = ["serverless", "lambda"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.6"
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"
